# mcp-tdo

./: .gitignore  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  pypi-release.yml
src/mcp_tdo/: __init__.py  models.py  server.py  tdo_client.py
src/mcp_tdo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: __init__.py  conftest.py  test_add_todo.py  test_create_note.py  test_mark_todo_done.py  test_pending_todos.py  test_search_notes.py  test_server.py  test_todo_contents.py  test_todo_count.py
