[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-tdo"
version = "0.1.0"
authors = [
    { name = "Abhishek Kumar Sharma", email = "iam2kabhishek@gmail.com" },
]
description = "MCP server for tdo note taking tool"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["mcp-server>=0.1.1", "pydantic>=2.0.0"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[project.urls]
"Homepage" = "https://github.com/2KAbhishek/mcp-tdo"
"Bug Tracker" = "https://github.com/2KAbhishek/mcp-tdo/issues"

[project.scripts]
mcp-tdo = "mcp_tdo:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
target-version = "py310"
line-length = 88
extend-exclude = [
    "build",
    "dist",
    ".venv",
    ".eggs",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "PTH", # flake8-use-pathlib
    "FLY", # flynt (f-string conversion)
    "PERF", # perflint
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "UP007", # use X | Y for type annotations (not compatible with Python 3.9)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG001",  # unused function argument
    "S101",    # use of assert
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.0",
]

[tool.ruff.lint.isort]
known-first-party = ["mcp_tdo"]
force-single-line = false

